# grug

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  GETTINGSTARTED.md  Makefile  README.md  build.ps1  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/scripts/: elo_report.py
.github/workflows/: benchmark.yml  build.yml  clang-tidy.yml  lichess-bot-deploy.yml  style-check.yml
bench/: .gitignore  benchctl  config.example.yaml  requirements.txt  schema.sql
bench/bench/: config.py  gitutil.py  stats.py
bench/books/: starter.epd
bench/deploy/: Caddyfile.example  nginx.conf.example
bench/scripts/: benchctl.py  get_cutechess.sh  get_stockfish.sh  run_gunicorn.sh  run_server.sh  run_worker.sh  simulate.py
bench/server/: app.py  db.py  pgnview.py  scheduler.py  wsgi.py
bench/tests/: test_api.py  test_auth.py  test_pgn.py  test_stats.py
bench/worker/: builder.py  cutechess.py  references.py  sandbox.py  worker.py
deploy/lichess/: compose.yml  config.yml.template  deploy.sh  grug-lichess-bot.service  healthcheck.sh  rollback.sh
engine/: .gitignore  Makefile
engine/lib/: grug.h
engine/resources/: random_resources.txt
engine/src/: board.c  get_next_line.c  globals.c  helpers.c  main.c
src/: algohelpers.c  algohelpers.h  algorithm.c  algorithm.h  attacks.c  attacks.h  bitboard.c  bitboard.h  board.c  board.h  main.c  move.h  movegen.c  movegen.h  perft.c  perft.h  search.c  search.h  types.h  uci.c  uci.h  util.c  util.h  zobrist.c  zobrist.h
tools/: play.py  see_sanity.c
(+26 files in other folders)
